# mediaserver-rs2

./: Cargo.toml
src/: main.rs  media_server.rs  mediaserver_room.rs  tokens_store.rs
web-app/: index.html  main.ts  package.json  vite.config.ts
web-app/src/: App.vue  index.html
web-app/src/components/: EnterRoomPage.vue  RoomPage.vue  VButton.vue  VCard.vue  VFormControl.vue  VInput.vue
web-app/src/components/Chat/: Chat.vue
web-app/src/stores/: appStore.ts  roomStore.ts
web-app/src/styles/: _components.sass  _typography.sass  _variables.sass  global.sass
