[package]
name = "mediaserver-rs2"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.11.0"
tokio = { version = "1", features = ["full"] }
mio  = { version = "1.0.2", features = ["os-poll", "net"] }
tokio-websockets = { version = "0.10.1", features = ["server", "sha1_smol"] }
rand = "0.8.5"
bytes = "1.7.2"
serde = "1.0.210"
warp = "0.3.7"
dotenvy = "0.15.7"
serde_json = "1.0.128"
console = "0.15.8"
futures-util = "0.3.30"
